tests/snapshots/tui_snapshot__tui_footer_with_usage.snap
---
source: tests/tui_snapshot.rs
expression: view
---
]0;Pi · Dummy Model · ready  Pi (Dummy Model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: prev  ctrl+o: tools  shift+tab: ...
  resources: 0 skills, 0 prompts, 0 themes, 0 extensions


  Assistant:

    Usage sample.

  Enter: send  Shift+Enter: newline  Alt+Enter: multi-line  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  󰚩 Dummy Model / ACT /  snapshot-fixture / ctx: 0%
  Tokens: 120 in / 45 out ($0.0030)  |  snapshot-fixture  |  Persist: balance...
